--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,13 @@
     <string name="_4">4</string>
     <string name="_5">5</string>
     <string name="_6">6</string>
-    <string name="subtraction">-</string>
+    <string name="Subtraction">-</string>
     <string name="_1">1</string>
     <string name="_2">2</string>
     <string name="_3">3</string>
-    <string name="plus">+</string>
-    <string name="plus_minus">+/-</string>
+    <string name="Plus">+</string>
+    <string name="Plus_minus">+/-</string>
     <string name="_0">0</string>
-    <string name="dot">.</string>
-    <string name="equal">=</string>
+    <string name="Dot">.</string>
+    <string name="Equal">=</string>
 </resources>
