Урок 4 - Добавили иконку и собрали APK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lesson2</string>
+    <string name="app_name">Calculator_V2</string>
     <string name="C">C</string>
     <string name="Hooks">()</string>
     <string name="Percent">%</string>
