--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="Theme_two">ThemeTwo</string>
     <string name="settings">Settings</string>
     <string name="back_to_calculator">Back to Calculator</string>
+    <string name="Theme_choice">Theme choosing:</string>
 </resources>
